test/lambda/negative/semantic/operator_comparability_symbol.ls
// @expect-error: E312
// @description: ordered comparisons only accept magnitude families

('a' < 'b')
